--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <html lang="en">
+
 <head>
     <meta charSet="utf-8" />
-    <title>React Spooky Skeleton</title>
+    <title>Magic Draw AR</title>
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="static/main.css">
 </head>
+
 <body>
     <div id="container"></div>
     <script src="static/main.bundle.js"></script>
+    <script>
+        window.renderScene()
+    </script>
 </body>
+
 </html>
